Correction de la couleur pour ameliore le contraste

--- a/style.css
+++ b/style.css
@@ -771,11 +771,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #EFA475;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #EFA475!important;
 }
 
 .btn-atomic-tangerine {
